--- a/index.html
+++ b/index.html
@@ -16,28 +16,12 @@
 
 <body>
   <header>
-    <nav>
+    <nav class="flex items-center basis-1 container mx-auto">
       <div class="navbar bg-base-100">
         <div class="navbar-start">
-          <!-- Dropdown Icon For Mobile View -->
-          <div class="dropdown">
-            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
-              </svg>
-            </div>
-            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-              <li><a>Home</a></li>
-              <li><a>services</a></li>
-              <li><a>Portfolio</a></li>
-              <li><a>Blogs</a></li>
-              <li><a>Contact Us</a></li>
-            </ul>
-          </div>
           <div class="flex items-center">
             <i class="bg-lime-400 rounded-full -rotate-45 p-2 mr-2 fa-solid fa-arrow-right-long"></i>
-              <a class="text-3xl font-bold">Rinterio</a>
+            <a class="text-3xl font-bold">Rinterio</a>
           </div>
         </div>
         <div class="navbar-center hidden lg:flex">
@@ -49,8 +33,31 @@
             <li><a>Contact Us</a></li>
           </ul>
         </div>
-        <div class="navbar-end">
-          <a class="btn bg-lime-500 rounded-full">Book Consult <i class="bg-black text-white rounded-full -rotate-45 p-2 fa-solid fa-arrow-right-long"></i></a>
+        <div class="navbar-end hidden lg:block">
+          <div class="flex justify-end items-center">
+            <span class="mx-5"><i class="fa-solid fa-magnifying-glass"></i></span>
+            <span class="mr-5"><i class="fa-solid fa-cart-shopping"></i></span>
+            <a class="btn bg-lime-500 rounded-full">Book Consult <i
+                class="bg-black text-white rounded-full -rotate-45 p-2 fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+      </div>
+      <div>
+        <!-- Dropdown Icon For Mobile View -->
+        <div class="dropdown">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+            </svg>
+          </div>
+          <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+            <li><a>Home</a></li>
+            <li><a>services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blogs</a></li>
+            <li><a>Contact Us</a></li>
+          </ul>
         </div>
       </div>
     </nav>
