--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Google Font CDN -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
   <!-- Tailwind CSS File Iink -->
   <link rel="stylesheet" href="./src/output.css" />
 </head>
 
-<body>
+<body class="bg-slate-100 font-manrope">
   <header>
-    <nav class="flex items-center basis-1 container mx-auto">
-      <div class="navbar bg-base-100">
+    <nav class="flex items-center container mx-auto">
+      <div class="navbar bg-slate-100">
         <div class="navbar-start">
           <div class="flex items-center">
             <i class="bg-lime-400 rounded-full -rotate-45 p-2 mr-2 fa-solid fa-arrow-right-long"></i>
-            <a class="text-3xl font-bold">Rinterio</a>
+            <a class="text-3xl font-extrabold">Rinterio</a>
           </div>
         </div>
         <div class="navbar-center hidden lg:flex">
@@ -35,8 +38,8 @@
         </div>
         <div class="navbar-end hidden lg:block">
           <div class="flex justify-end items-center">
-            <span class="mx-5"><i class="fa-solid fa-magnifying-glass"></i></span>
-            <span class="mr-5"><i class="fa-solid fa-cart-shopping"></i></span>
+            <span class="mx-5 bg-base-100 p-2 rounded-full"><i class="fa-solid fa-magnifying-glass"></i></span>
+            <span class="mr-5 bg-base-100 p-2 rounded-full"><i class="fa-solid fa-cart-shopping"></i></span>
             <a class="btn bg-lime-500 rounded-full">Book Consult <i
                 class="bg-black text-white rounded-full -rotate-45 p-2 fa-solid fa-arrow-right-long"></i></a>
           </div>
@@ -44,23 +47,37 @@
       </div>
       <div>
         <!-- Dropdown Icon For Mobile View -->
-        <div class="dropdown">
+        <div class="dropdown lg:hidden">
           <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
             </svg>
           </div>
-          <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-            <li><a>Home</a></li>
-            <li><a>services</a></li>
-            <li><a>Portfolio</a></li>
-            <li><a>Blogs</a></li>
-            <li><a>Contact Us</a></li>
-          </ul>
+        </div>
+    </nav>
+    <!-- Banner Section -->
+    <div class="container mx-auto">
+      <div class="px-10 flex justify-center">
+        <img class="lg:w-1/2" src="./assets/banner.png" alt="">
+      </div>
+      <div class="hero">
+        <div class="hero-content text-center">
+          <div class="">
+            <h1 class="text-3xl lg:text-5xl font-extrabold px-4">A barn house of this design has a striking appearance</h1>
+            <p class="py-4 px-4 lg:px-10 text-gray-500">
+              The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
+              wood, sleek
+              metal accents, and large windows that flood the space with natural light.
+            </p>
+            <div class="flex justify-center items-center">
+              <a class="btn bg-lime-200 rounded-full w-full lg:w-fit">View Details <i
+                  class="bg-lime-400 rounded-full -rotate-45 p-2 fa-solid fa-arrow-right-long"></i></a>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
+    </div>
   </header>
 </body>
 
