--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="./src/output.css" />
 </head>
 
-<body class="bg-slate-100 font-manrope">
-  <header>
+<body class="font-manrope">
+  <header class="bg-gradient-to-b from-slate-100 to-white">
     <nav class="flex items-center container mx-auto">
       <div class="navbar bg-slate-100">
         <div class="navbar-start">
@@ -64,7 +64,8 @@
       <div class="hero">
         <div class="hero-content text-center">
           <div class="">
-            <h1 class="text-3xl lg:text-5xl font-extrabold px-4">A barn house of this design has a striking appearance</h1>
+            <h1 class="text-3xl lg:text-5xl font-extrabold px-4">A barn house of this design has a striking appearance
+            </h1>
             <p class="py-4 px-4 lg:px-10 text-gray-500">
               The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
               wood, sleek
@@ -79,6 +80,39 @@
       </div>
     </div>
   </header>
+  <section class="bg-slate-100">
+    <div class="hero  container mx-auto">
+      <div class="hero-content flex-col lg:flex-row-reverse">
+        <div>
+          <img src="./assets/Rectangle.png" class="max-w-sm rounded-lg shadow-2xl" />
+        </div>
+        <div>
+          <p>About Us</p>
+          <h1>We design thoughtful, liveable spaces</h1>
+          <p>The barn house captivates with its blend of rustic charm and
+            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <div class="flex items-center gap-6 space-y-4 bg-white p-4 my-4">
+            <div class="p-4">
+              <img src="./assets/residential.png" alt="">
+            </div>
+            <div class="space-y-2">
+              <h3 class="font-bold text-xl">Residential</h3>
+              <p class="text-base text-gray-400">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+          </div>
+          <div class="flex items-center gap-6 space-y-4 bg-white p-4 my-4">
+            <div class="p-4">
+              <img src="./assets/commercial.png" alt="">
+            </div>
+            <div class="space-y-2">
+              <h3 class="font-bold text-xl">Commercial</h3>
+              <p class="text-base text-gray-400">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
