update 3rd section left side

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
           <img src="./assets/Rectangle.png" class="max-w-sm rounded-lg shadow-2xl" />
         </div>
         <div>
-          <p>About Us</p>
-          <h1>We design thoughtful, liveable spaces</h1>
-          <p>The barn house captivates with its blend of rustic charm and
+          <p class="bg-white inline py-1 px-3 rounded-full"><i class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>About Us</p>
+          <h1 class="text-4xl font-extrabold">We design thoughtful,<br> liveable spaces</h1>
+          <p class="text-gray-400">The barn house captivates with its blend of rustic charm and
             modern sophistication, featuring weathered wood, sleek metal accents.</p>
           <div class="flex items-center gap-6 space-y-4 bg-white p-4 my-4">
             <div class="p-4">
