--- a/index.html
+++ b/index.html
@@ -81,32 +81,38 @@
     </div>
   </header>
   <section class="bg-slate-100">
-    <div class="hero  container mx-auto">
-      <div class="hero-content flex-col lg:flex-row-reverse">
-        <div>
-          <img src="./assets/Rectangle.png" class="max-w-sm rounded-lg shadow-2xl" />
-        </div>
-        <div>
-          <p class="bg-white inline py-1 px-3 rounded-full"><i class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>About Us</p>
-          <h1 class="mt-4 text-4xl font-extrabold">We design thoughtful,<br> liveable spaces</h1>
-          <p class="text-gray-400 my-4">The barn house captivates with its blend of rustic charm and
-            modern sophistication, featuring weathered wood, sleek metal accents.</p>
-          <div class="flex items-center gap-6 space-y-4 bg-white p-4 my-4">
-            <div class="p-4">
-              <img src="./assets/residential.png" alt="">
-            </div>
-            <div class="space-y-2">
-              <h3 class="font-bold text-xl">Residential</h3>
-              <p class="text-base text-gray-400">The barn house captivates with its blend of rustic charm and modern.</p>
-            </div>
+    <div class="relative container mx-auto">
+      <div class="hidden lg:block z-10 absolute top-3 -left-4 border-2 py-4 border-dashed">
+        <img src="./assets/Vector.png" alt="">
+      </div>
+      <div class="hero py-4 lg:py-16 min-w-full">
+        <div class="hero-content flex-col-reverse justify-center lg:flex-row-reverse">
+          <div class="flex-1">
+            <img src="./assets/Rectangle.png" class="rounded-lg shadow-2xl" />
           </div>
-          <div class="flex items-center gap-6 space-y-4 bg-white p-4 my-4">
-            <div class="p-4">
-              <img src="./assets/commercial.png" alt="">
+          <div class="flex-1">
+            <div class="flex items-center flex-col lg:items-start">
+              <p class="bg-white inline py-1 px-3 rounded-full"><i class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>About Us</p>
+              <h1 class="text-center lg:text-left mt-2 text-2xl lg:text-4xl font-extrabold">We design thoughtful,<br> liveable spaces</h1>
+              <p class="text-center lg:text-left text-gray-500 my-2">We are commited that, we can provide a intelligent design for your livable dream house. It's our main goal.</p>
             </div>
-            <div class="space-y-2">
-              <h3 class="font-bold text-xl">Commercial</h3>
-              <p class="text-base text-gray-400">The barn house captivates with its blend of rustic charm and modern.</p>
+            <div class="flex items-center gap-6 space-y-4 bg-white p-4 my-4">
+              <div class="p-4">
+                <img src="./assets/commercial.png" alt="">
+              </div>
+              <div class="space-y-2">
+                <h3 class="font-bold text-xl">Commercial</h3>
+                <p class="text-base text-gray-400">We can provide you to the best Commercial design for you.</p>
+              </div>
+            </div>
+            <div class="flex items-center gap-6 space-y-4 bg-white p-4 my-4">
+              <div class="p-4">
+                <img src="./assets/residential.png" alt="">
+              </div>
+              <div class="space-y-2">
+                <h3 class="font-bold text-xl">Residential</h3>
+                <p class="text-base text-gray-400">We can provide you to the best residencial design for you.</p>
+              </div>
             </div>
           </div>
         </div>
