--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       </div>
     </div>
   </header>
+  <!-- Liveable Space -->
   <section class="bg-slate-100">
     <div class="relative container mx-auto">
       <div class="hidden lg:block z-10 absolute top-3 -left-4 border-2 py-4 border-dashed">
@@ -88,7 +89,7 @@
       <div class="hero py-4 lg:py-16 min-w-full">
         <div class="hero-content flex-col-reverse justify-center lg:flex-row-reverse">
           <div class="flex-1">
-            <img src="./assets/Rectangle.png" class="rounded-lg shadow-2xl" />
+            <img src="./assets/Rectangle.png" class="rounded-lg shadow-xl" />
           </div>
           <div class="flex-1">
             <div class="flex items-center flex-col lg:items-start">
@@ -96,7 +97,8 @@
               <h1 class="text-center lg:text-left mt-2 text-2xl lg:text-4xl font-extrabold">We design thoughtful,<br> liveable spaces</h1>
               <p class="text-center lg:text-left text-gray-500 my-2">We are commited that, we can provide a intelligent design for your livable dream house. It's our main goal.</p>
             </div>
-            <div class="flex items-center gap-6 space-y-4 bg-white p-4 my-4">
+            <!-- Card-1 -->
+            <div class="flex items-center rounded-lg gap-6 space-y-4 bg-white p-4 my-4 shadow-lg">
               <div class="p-4">
                 <img src="./assets/commercial.png" alt="">
               </div>
@@ -105,7 +107,8 @@
                 <p class="text-base text-gray-400">We can provide you to the best Commercial design for you.</p>
               </div>
             </div>
-            <div class="flex items-center gap-6 space-y-4 bg-white p-4 my-4">
+            <!-- Card-2 -->
+            <div class="flex items-center gap-6 rounded-lg space-y-4 bg-white p-4 my-4 shadow-lg">
               <div class="p-4">
                 <img src="./assets/residential.png" alt="">
               </div>
@@ -119,6 +122,38 @@
       </div>
     </div>
   </section>
+<!-- Work Process -->
+ <section class="bg-slate-100 pb-10">
+  <div class="container mx-auto space-y-5">
+    <div class="container mx-auto text-center space-y-4">
+      <p class="bg-white inline py-1 px-3 rounded-full"><i class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>About Us</p>
+      <h1 class="text-3xl lg:text-4xl font-bold">Our Works Process</h1>
+      <p class="text-gray-400 w-10/12 lg:w-1/2 mx-auto">Our work process is highly maintained. we try to make you best quality services. here details about our work process.</p>
+    </div>
+    <div class="flex lg:flex-row flex-col gap-5 p-4 lg:p-0">
+      <div class="space-y-3 bg-fuchsia-200 p-4 rounded-xl shadow-xl">
+        <img src="assets/concept.png" alt="">
+        <h3 class="text-xl font-bold">Concept</h3>
+        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+      </div>
+      <div class="space-y-3 bg-yellow-200 p-4 rounded-xl shadow-xl">
+        <img src="assets/flow-chart.png" alt="">
+        <h3 class="text-xl font-bold">Design Process</h3>
+        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+      </div>
+      <div class="space-y-3 bg-green-200 p-4 rounded-xl shadow-xl">
+        <img src="assets/vision.png" alt="">
+        <h3 class="text-xl font-bold">Supervision</h3>
+        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+      </div>
+      <div class="space-y-3 bg-blue-200 p-4 rounded-xl shadow-xl">
+        <img src="assets/budget-planning.png" alt="">
+        <h3 class="text-xl font-bold">Budget Planning</h3>
+        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+      </div>
+    </div>
+  </div>
+ </section>
 </body>
 
 </html>
