Add portfolio section

--- a/index.html
+++ b/index.html
@@ -131,21 +131,25 @@
       <p class="text-gray-400 w-10/12 lg:w-1/2 mx-auto">Our work process is highly maintained. we try to make you best quality services. here details about our work process.</p>
     </div>
     <div class="flex lg:flex-row flex-col gap-5 p-4 lg:p-0">
+      <!-- Concept Card -->
       <div class="space-y-3 bg-fuchsia-200 p-4 rounded-xl shadow-xl">
         <img src="assets/concept.png" alt="">
         <h3 class="text-xl font-bold">Concept</h3>
         <p>The barn house captivates with its blend of rustic charm and modern.</p>
       </div>
+      <!-- Design Card -->
       <div class="space-y-3 bg-yellow-200 p-4 rounded-xl shadow-xl">
         <img src="assets/flow-chart.png" alt="">
         <h3 class="text-xl font-bold">Design Process</h3>
         <p>The barn house captivates with its blend of rustic charm and modern.</p>
       </div>
+      <!-- Supervision Card -->
       <div class="space-y-3 bg-green-200 p-4 rounded-xl shadow-xl">
         <img src="assets/vision.png" alt="">
         <h3 class="text-xl font-bold">Supervision</h3>
         <p>The barn house captivates with its blend of rustic charm and modern.</p>
       </div>
+      <!-- Budget Plan Card -->
       <div class="space-y-3 bg-blue-200 p-4 rounded-xl shadow-xl">
         <img src="assets/budget-planning.png" alt="">
         <h3 class="text-xl font-bold">Budget Planning</h3>
@@ -154,6 +158,55 @@
     </div>
   </div>
  </section>
+ <!-- Portfolio Section -->
+  <section class="bg-slate-100 lg:bg-white pt-10">
+    <div class="px-6 container mx-auto rounded-xl">
+      <div class="text-center space-y-4">
+        <p class="bg-green-100 inline py-1 px-3 rounded-full"><i class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>Explore our Latest works</p>
+        <h1 class="text-3xl lg:text-4xl font-bold">Our Latest Portfolio</h1>
+        <p class="text-gray-800 w-10/12 lg:w-1/2 mx-auto">We are very happy to share with you our latest portfolios. that can overview our achivement, goal, ambition etc.</p>
+      </div>
+      <div class="flex mt-10 items-center flex-col lg:flex-row gap-x-6">
+        <div class="flex items-center flex-col bg-white lg:bg-none lg:flex-row gap-6 p-4 border-2 rounded-xl">
+          <div>
+            <img class="w-[500px] h-[200px] lg:w-auto lg:h-auto" src="assets/img1.png" alt="">
+          </div>
+          <div>
+            <h1 class="text-xl font-bold">Commercial</h1>
+            <p class="text-sm text-gray-600 my-4">This is our commercial project. the client was so much happy with this project.</p>
+            <a class="font-bold bg-white rounded-full w-fit">View Details <i
+              class="bg-lime-400 rounded-full -rotate-45 p-1 fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <div class="bg-white lg:bg-none p-4 border-2 rounded-lg mt-4 lg:mt-0">
+          <img class="w-[500px] h-[200px] lg:w-full lg:h-full" src="./assets/img2.png" alt="">
+        </div>
+      </div>
+      <div class="flex items-center flex-col-reverse lg:flex-row gap-x-6 mt-4">
+        <div class="p-4 border-2 rounded-lg">
+          <img class="w-[500px] h-[200px] lg:w-full lg:h-full" src="./assets/img3.png" alt="">
+        </div>
+        <div>
+          <div class="flex mt-10 items-center flex-col lg:flex-row gap-x-6">
+            <div class="flex items-center flex-col bg-white lg:bg-none lg:flex-row gap-6 p-4 border-2 rounded-xl">
+              <div>
+                <img class="w-[500px] h-[200px] lg:w-auto lg:h-auto" src="assets/img4.png" alt="">
+              </div>
+              <div>
+                <h1 class="text-xl font-bold">Commercial</h1>
+                <p class="text-sm text-gray-600 my-4">This is our commercial project. the client was so much happy with this project.</p>
+                <a class="font-bold bg-white rounded-full w-fit">View Details <i
+                  class="bg-lime-400 rounded-full -rotate-45 p-1 fa-solid fa-arrow-right-long"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="p-4 border-2 rounded-lg">
+          <img class="w-[500px] h-[200px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
