--- a/index.html
+++ b/index.html
@@ -89,13 +89,16 @@
       <div class="hero py-4 lg:py-16 min-w-full">
         <div class="hero-content flex-col-reverse justify-center lg:flex-row-reverse">
           <div class="flex-1">
-            <img src="./assets/Rectangle.png" class="rounded-lg shadow-xl" />
+            <img class="w-[500px] lg:w-auto h-[250px] lg:h-auto" src="./assets/Rectangle.png" class="rounded-lg shadow-xl" />
           </div>
           <div class="flex-1">
             <div class="flex items-center flex-col lg:items-start">
-              <p class="bg-white inline py-1 px-3 rounded-full"><i class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>About Us</p>
-              <h1 class="text-center lg:text-left mt-2 text-2xl lg:text-4xl font-extrabold">We design thoughtful,<br> liveable spaces</h1>
-              <p class="text-center lg:text-left text-gray-500 my-2">We are commited that, we can provide a intelligent design for your livable dream house. It's our main goal.</p>
+              <p class="bg-white inline py-1 px-3 rounded-full"><i
+                  class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>About Us</p>
+              <h1 class="text-center lg:text-left mt-2 text-2xl lg:text-4xl font-extrabold">We design thoughtful,<br>
+                liveable spaces</h1>
+              <p class="text-center lg:text-left text-gray-500 my-2">We are commited that, we can provide a intelligent
+                design for your livable dream house. It's our main goal.</p>
             </div>
             <!-- Card-1 -->
             <div class="flex items-center rounded-lg gap-6 space-y-4 bg-white p-4 my-4 shadow-lg">
@@ -122,88 +125,101 @@
       </div>
     </div>
   </section>
-<!-- Work Process -->
- <section class="bg-slate-100 pb-10">
-  <div class="container mx-auto space-y-5">
-    <div class="container mx-auto text-center space-y-4">
-      <p class="bg-white inline py-1 px-3 rounded-full"><i class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>About Us</p>
-      <h1 class="text-3xl lg:text-4xl font-bold">Our Works Process</h1>
-      <p class="text-gray-400 w-10/12 lg:w-1/2 mx-auto">Our work process is highly maintained. we try to make you best quality services. here details about our work process.</p>
+  <!-- Work Process -->
+  <section class="bg-slate-100 pb-10">
+    <div class="container mx-auto space-y-5">
+      <div class="container mx-auto text-center space-y-4">
+        <p class="bg-white inline py-1 px-3 rounded-full"><i
+            class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>How We Work</p>
+        <h1 class="text-3xl lg:text-4xl font-bold">Our Works Process</h1>
+        <p class="text-gray-400 w-10/12 lg:w-1/2 mx-auto">Our work process is highly maintained. we try to make you best
+          quality services. here details about our work process.</p>
+      </div>
+      <div class="flex lg:flex-row flex-col gap-5 p-4 lg:p-0">
+        <!-- Concept Card -->
+        <div class="space-y-3 bg-fuchsia-300 p-4 rounded-xl shadow-xl">
+          <img src="assets/concept.png" alt="">
+          <h3 class="text-xl font-bold">Concept</h3>
+          <p>The barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+        <!-- Design Card -->
+        <div class="space-y-3 bg-yellow-300 p-4 rounded-xl shadow-xl">
+          <img src="assets/flow-chart.png" alt="">
+          <h3 class="text-xl font-bold">Design Process</h3>
+          <p>The barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+        <!-- Supervision Card -->
+        <div class="space-y-3 bg-green-300 p-4 rounded-xl shadow-xl">
+          <img src="assets/vision.png" alt="">
+          <h3 class="text-xl font-bold">Supervision</h3>
+          <p>The barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+        <!-- Budget Plan Card -->
+        <div class="space-y-3 bg-blue-300 p-4 rounded-xl shadow-xl">
+          <img src="assets/budget-planning.png" alt="">
+          <h3 class="text-xl font-bold">Budget Planning</h3>
+          <p>The barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+      </div>
     </div>
-    <div class="flex lg:flex-row flex-col gap-5 p-4 lg:p-0">
-      <!-- Concept Card -->
-      <div class="space-y-3 bg-fuchsia-200 p-4 rounded-xl shadow-xl">
-        <img src="assets/concept.png" alt="">
-        <h3 class="text-xl font-bold">Concept</h3>
-        <p>The barn house captivates with its blend of rustic charm and modern.</p>
-      </div>
-      <!-- Design Card -->
-      <div class="space-y-3 bg-yellow-200 p-4 rounded-xl shadow-xl">
-        <img src="assets/flow-chart.png" alt="">
-        <h3 class="text-xl font-bold">Design Process</h3>
-        <p>The barn house captivates with its blend of rustic charm and modern.</p>
-      </div>
-      <!-- Supervision Card -->
-      <div class="space-y-3 bg-green-200 p-4 rounded-xl shadow-xl">
-        <img src="assets/vision.png" alt="">
-        <h3 class="text-xl font-bold">Supervision</h3>
-        <p>The barn house captivates with its blend of rustic charm and modern.</p>
-      </div>
-      <!-- Budget Plan Card -->
-      <div class="space-y-3 bg-blue-200 p-4 rounded-xl shadow-xl">
-        <img src="assets/budget-planning.png" alt="">
-        <h3 class="text-xl font-bold">Budget Planning</h3>
-        <p>The barn house captivates with its blend of rustic charm and modern.</p>
-      </div>
-    </div>
-  </div>
- </section>
- <!-- Portfolio Section -->
+  </section>
+  <!-- Portfolio Section -->
   <section class="bg-slate-100 lg:bg-white pt-10">
     <div class="px-6 container mx-auto rounded-xl">
+      <!-- Portfolio Text -->
       <div class="text-center space-y-4">
-        <p class="bg-green-100 inline py-1 px-3 rounded-full"><i class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>Explore our Latest works</p>
+        <p class="bg-green-100 inline py-1 px-3 rounded-full"><i
+            class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>Explore our Latest works</p>
         <h1 class="text-3xl lg:text-4xl font-bold">Our Latest Portfolio</h1>
-        <p class="text-gray-800 w-10/12 lg:w-1/2 mx-auto">We are very happy to share with you our latest portfolios. that can overview our achivement, goal, ambition etc.</p>
+        <p class="text-gray-800 w-10/12 lg:w-1/2 mx-auto">We are very happy to share with you our latest portfolios.
+          that can overview our achivement, goal, ambition etc.</p>
       </div>
+      <!-- Portfolio 1st flex div -->
       <div class="flex mt-10 items-center flex-col lg:flex-row gap-x-6">
         <div class="flex items-center flex-col bg-white lg:bg-none lg:flex-row gap-6 p-4 border-2 rounded-xl">
           <div>
-            <img class="w-[500px] h-[200px] lg:w-auto lg:h-auto" src="assets/img1.png" alt="">
+            <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="assets/img1.png" alt="">
           </div>
           <div>
             <h1 class="text-xl font-bold">Commercial</h1>
-            <p class="text-sm text-gray-600 my-4">This is our commercial project. the client was so much happy with this project.</p>
+            <p class="text-sm text-gray-600 my-4">This is our commercial project. the client was so much happy with this
+              project.</p>
             <a class="font-bold bg-white rounded-full w-fit">View Details <i
-              class="bg-lime-400 rounded-full -rotate-45 p-1 fa-solid fa-arrow-right-long"></i></a>
+                class="bg-lime-400 rounded-full -rotate-45 p-1 fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <div class="bg-white lg:bg-none p-4 border-2 rounded-lg mt-4 lg:mt-0">
-          <img class="w-[500px] h-[200px] lg:w-full lg:h-full" src="./assets/img2.png" alt="">
+          <img class="w-[500px] h-[220px] lg:w-full lg:h-full" src="./assets/img2.png" alt="">
         </div>
       </div>
+      <!-- Portfolio 2nd flex div -->
       <div class="flex items-center flex-col-reverse lg:flex-row gap-x-6 mt-4">
+                <div class="lg:hidden p-4 border-2 rounded-lg">
+                  <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
+                </div>
         <div class="p-4 border-2 rounded-lg">
-          <img class="w-[500px] h-[200px] lg:w-full lg:h-full" src="./assets/img3.png" alt="">
+          <img class="w-[500px] h-[220px] lg:w-full lg:h-full" src="./assets/img3.png" alt="">
         </div>
         <div>
-          <div class="flex mt-10 items-center flex-col lg:flex-row gap-x-6">
+          <div class="flex items-center flex-col lg:flex-row gap-x-6">
             <div class="flex items-center flex-col bg-white lg:bg-none lg:flex-row gap-6 p-4 border-2 rounded-xl">
               <div>
-                <img class="w-[500px] h-[200px] lg:w-auto lg:h-auto" src="assets/img4.png" alt="">
+                <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="assets/img4.png" alt="">
               </div>
               <div>
                 <h1 class="text-xl font-bold">Commercial</h1>
-                <p class="text-sm text-gray-600 my-4">This is our commercial project. the client was so much happy with this project.</p>
+                <p class="text-sm text-gray-600 my-4">This is our commercial project. the client was so much happy with
+                  this project.</p>
                 <a class="font-bold bg-white rounded-full w-fit">View Details <i
-                  class="bg-lime-400 rounded-full -rotate-45 p-1 fa-solid fa-arrow-right-long"></i></a>
+                    class="bg-lime-400 rounded-full -rotate-45 p-1 fa-solid fa-arrow-right-long"></i></a>
               </div>
             </div>
           </div>
         </div>
         <div class="p-4 border-2 rounded-lg">
-          <img class="w-[500px] h-[200px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
+          <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
         </div>
+
       </div>
     </div>
   </section>
