--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       <div class="hero py-4 lg:py-16 min-w-full">
         <div class="hero-content flex-col-reverse justify-center lg:flex-row-reverse">
           <div class="flex-1">
-            <img class="w-[500px] lg:w-auto h-[250px] lg:h-auto" src="./assets/Rectangle.png" class="rounded-lg shadow-xl" />
+            <img class="w-[500px] lg:w-auto h-[250px] lg:h-auto" src="./assets/Rectangle.png"
+              class="rounded-lg shadow-xl" />
           </div>
           <div class="flex-1">
             <div class="flex items-center flex-col lg:items-start">
@@ -194,9 +195,9 @@
       </div>
       <!-- Portfolio 2nd flex div -->
       <div class="flex items-center flex-col-reverse lg:flex-row gap-x-6 mt-4">
-                <div class="lg:hidden p-4 border-2 rounded-lg">
-                  <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
-                </div>
+        <div class="lg:hidden p-4 border-2 rounded-lg">
+          <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
+        </div>
         <div class="p-4 border-2 rounded-lg">
           <img class="w-[500px] h-[220px] lg:w-full lg:h-full" src="./assets/img3.png" alt="">
         </div>
@@ -221,6 +222,29 @@
         </div>
 
       </div>
+    </div>
+  </section>
+  <!-- Next Project Section -->
+  <section class="bg-cover" style="background-image: url('./assets/bg.jpg');">
+    <div class="mt-10 container mx-auto py-20">
+      <!-- Next Project Text Area -->
+      <div class="text-center space-y-4">
+        <p class="bg-green-100 inline py-1 px-3 rounded-full"><i
+            class="rounded-full mr-2 fa-solid fa-arrow-right-long"></i>Let’s Connect</p>
+        <h1 class="text-3xl lg:text-4xl font-bold">Let’s Discuss Next Project</h1>
+        <p class="text-gray-800 w-10/12 lg:w-1/2 mx-auto">We want to discuss with you about our services. please fill
+          the box bellow to khow us our discussion services.</p>
+      </div>
+      <!-- Input Feild -->
+      <form class="mt-10 flex flex-col lg:grid gap-5 lg:grid-cols-2 px-4 lg:px-28" action="">
+        <input type="text" placeholder="First Name*" class="input max-w-md w-full rounded-full">
+        <input type="text" placeholder="Last Name*" class="input max-w-md w-full rounded-full">
+        <input type="tel" placeholder="Phone Number*" class="input max-w-md w-full rounded-full">
+        <input type="email" placeholder="Email*" class="input max-w-md w-full rounded-full">
+        <textarea class="textarea h-40 col-span-2 rounded-2xl" placeholder="Write your message here"></textarea>
+        <a class="btn bg-lime-500 rounded-full px-28 col-span-2">Send Mail <i
+            class="bg-black text-white rounded-full -rotate-45 p-2 fa-solid fa-arrow-right-long"></i></a>
+      </form>
     </div>
   </section>
 </body>
