--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li><a>Home</a></li>
-            <li><a>services</a></li>
-            <li><a>Portfolio</a></li>
-            <li><a>Blogs</a></li>
-            <li><a>Contact Us</a></li>
+            <li class="hover:font-extrabold"><a>Home</a></li>
+            <li class="hover:font-extrabold"><a>services</a></li>
+            <li class="hover:font-extrabold"><a>Portfolio</a></li>
+            <li class="hover:font-extrabold"><a>Blogs</a></li>
+            <li class="hover:font-extrabold"><a>Contact Us</a></li>
           </ul>
         </div>
         <div class="navbar-end hidden lg:block">
@@ -165,7 +165,7 @@
     </div>
   </section>
   <!-- Portfolio Section -->
-  <section class="bg-slate-100 lg:bg-white pt-10">
+  <section class="bg-slate-100 lg:bg-white pb-6">
     <div class="px-6 container mx-auto rounded-xl">
       <!-- Portfolio Text -->
       <div class="text-center space-y-4">
@@ -194,11 +194,11 @@
         </div>
       </div>
       <!-- Portfolio 2nd flex div -->
-      <div class="flex items-center flex-col-reverse lg:flex-row gap-x-6 mt-4">
-        <div class="lg:hidden p-4 border-2 rounded-lg">
+      <div class="flex items-center flex-col-reverse lg:flex-row gap-4 mt-4">
+        <div class="bg-white lg:hidden p-4 border-2 rounded-lg">
           <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
         </div>
-        <div class="p-4 border-2 rounded-lg">
+        <div class="bg-white p-4 border-2 rounded-lg">
           <img class="w-[500px] h-[220px] lg:w-full lg:h-full" src="./assets/img3.png" alt="">
         </div>
         <div>
@@ -217,7 +217,7 @@
             </div>
           </div>
         </div>
-        <div class="p-4 border-2 rounded-lg">
+        <div class=" bg-white p-4 border-2 rounded-lg">
           <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
         </div>
 
@@ -226,7 +226,7 @@
   </section>
   <!-- Next Project Section -->
   <section class="bg-cover" style="background-image: url('./assets/bg.jpg');">
-    <div class="mt-10 container mx-auto py-20">
+    <div class="container mx-auto py-10 lg:py-16">
       <!-- Next Project Text Area -->
       <div class="text-center space-y-4">
         <p class="bg-green-100 inline py-1 px-3 rounded-full"><i
@@ -247,6 +247,28 @@
       </form>
     </div>
   </section>
+  <footer>
+    <div class="bg-black text-white space-y-6 py-16">
+      <div class="flex items-center justify-center">
+        <i class="bg-lime-400 rounded-full -rotate-45 p-2 mr-2 fa-solid fa-arrow-right-long"></i>
+        <a class="text-3xl font-extrabold">Rinterio</a>
+      </div>
+      <p class="text-gray-500 w-8/12 lg:w-1/2 mx-auto text-center">Please contact with us by any social media for our
+        best services. Give your valuable feedback for us.</p>
+      <div class="flex justify-center flex-1">
+        <ul class="flex justify-center items-center flex-col lg:flex-row gap-y-4 lg:gap-x-24 px-1 text-gray-300">
+          <li><a>Home</a></li>
+          <li><a>services</a></li>
+          <li><a>Portfolio</a></li>
+          <li><a>Blogs</a></li>
+          <li><a>Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="flex justify-center px-4">
+        <a class="w-full lg:w-auto btn bg-lime-500 rounded-full py-1 font-extrabold text-lg">Book Consult <i
+            class="bg-black text-white rounded-full -rotate-45 p-2 fa-solid fa-arrow-right-long"></i></a>
+      </div>
+    </div>
+  </footer>
 </body>
-
 </html>
