--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               metal accents, and large windows that flood the space with natural light.
             </p>
             <div class="flex justify-center items-center">
-              <a class="btn bg-lime-200 rounded-full w-full lg:w-fit">View Details <i
+              <a class="btn bg-lime-200 rounded-full w-full lg:w-fit text-lg">View Details <i
                   class="bg-lime-400 rounded-full -rotate-45 p-2 fa-solid fa-arrow-right-long"></i></a>
             </div>
           </div>
@@ -176,7 +176,7 @@
           that can overview our achivement, goal, ambition etc.</p>
       </div>
       <!-- Portfolio 1st flex div -->
-      <div class="flex mt-10 items-center flex-col lg:flex-row gap-x-6">
+      <div class="flex mt-10 justify-center items-center flex-col lg:flex-row gap-x-6">
         <div class="flex items-center flex-col bg-white lg:bg-none lg:flex-row gap-6 p-4 border-2 rounded-xl">
           <div>
             <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="assets/img1.png" alt="">
@@ -194,7 +194,7 @@
         </div>
       </div>
       <!-- Portfolio 2nd flex div -->
-      <div class="flex items-center flex-col-reverse lg:flex-row gap-4 mt-4">
+      <div class="flex items-center justify-center flex-col-reverse lg:flex-row gap-4 mt-4">
         <div class="bg-white lg:hidden p-4 border-2 rounded-lg">
           <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
         </div>
@@ -220,7 +220,6 @@
         <div class=" bg-white p-4 border-2 rounded-lg">
           <img class="w-[500px] h-[220px] lg:w-auto lg:h-auto" src="./assets/img5.png" alt="">
         </div>
-
       </div>
     </div>
   </section>
@@ -236,13 +235,13 @@
           the box bellow to khow us our discussion services.</p>
       </div>
       <!-- Input Feild -->
-      <form class="mt-10 flex flex-col lg:grid gap-5 lg:grid-cols-2 px-4 lg:px-28" action="">
+      <form class="mt-10 flex flex-col lg:grid gap-5 lg:grid-cols-2 px-4 lg:px-48" action="">
         <input type="text" placeholder="First Name*" class="input max-w-md w-full rounded-full">
         <input type="text" placeholder="Last Name*" class="input max-w-md w-full rounded-full">
         <input type="tel" placeholder="Phone Number*" class="input max-w-md w-full rounded-full">
         <input type="email" placeholder="Email*" class="input max-w-md w-full rounded-full">
         <textarea class="textarea h-40 col-span-2 rounded-2xl" placeholder="Write your message here"></textarea>
-        <a class="btn bg-lime-500 rounded-full px-28 col-span-2">Send Mail <i
+        <a class="btn bg-lime-500 rounded-full col-span-2 w-full mx-auto text-lg">Send Mail <i
             class="bg-black text-white rounded-full -rotate-45 p-2 fa-solid fa-arrow-right-long"></i></a>
       </form>
     </div>
