--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
   </section>
   <!-- Work Process -->
-  <section class="bg-slate-100 pb-10">
+  <section class="bg-slate-100">
     <div class="container mx-auto space-y-5">
       <div class="container mx-auto text-center space-y-4">
         <p class="bg-white inline py-1 px-3 rounded-full"><i
@@ -164,8 +164,43 @@
       </div>
     </div>
   </section>
+  <!-- Unique Section -->
+  <section class="bg-slate-100 lg:mb-10">
+    <div class="hero container mx-auto">
+      <div class="hero-content flex-col lg:flex-row-reverse gap-x-32">
+        <div class="text-center lg:text-left">
+          <h1 class="text-5xl font-extrabold text-lime-500 italic">Login now!</h1>
+          <p class="py-6">
+            Please Login tp see our live demo services. We try to provide best client satisfaction.
+          </p>
+        </div>
+        <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-xl">
+          <form class="card-body">
+            <div class="form-control">
+              <label class="label">
+                <span class="label-text">Email</span>
+              </label>
+              <input type="email" placeholder="email" class="input input-bordered" required />
+            </div>
+            <div class="form-control">
+              <label class="label">
+                <span class="label-text">Password</span>
+              </label>
+              <input type="password" placeholder="password" class="input input-bordered" required />
+              <label class="label">
+                <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
+              </label>
+            </div>
+            <div class="form-control mt-6">
+              <button class="btn btn-primary">Login</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Portfolio Section -->
-  <section class="bg-slate-100 lg:bg-white pb-6">
+  <section class="bg-slate-100 lg:bg-white py-6">
     <div class="px-6 container mx-auto rounded-xl">
       <!-- Portfolio Text -->
       <div class="text-center space-y-4">
@@ -270,4 +305,5 @@
     </div>
   </footer>
 </body>
+
 </html>
