add padding in unique section

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </div>
   </section>
   <!-- Unique Section -->
-  <section class="bg-slate-100 lg:mb-10">
+  <section class="bg-slate-100 lg:py-10 lg:mb-10">
     <div class="hero container mx-auto">
       <div class="hero-content flex-col lg:flex-row-reverse gap-x-32">
         <div class="text-center lg:text-left">
