--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@
       <div>
         <!-- Dropdown Icon For Mobile View -->
         <div class="dropdown lg:hidden">
-          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
-            </svg>
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden bg-white rounded-full mr-5">
+            <i class="fa-solid fa-bars"></i>
           </div>
         </div>
     </nav>
@@ -141,25 +138,25 @@
         <div class="space-y-3 bg-fuchsia-300 p-4 rounded-xl shadow-xl">
           <img src="assets/concept.png" alt="">
           <h3 class="text-xl font-bold">Concept</h3>
-          <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          <p>We have experiance to make the concept of design.</p>
         </div>
         <!-- Design Card -->
         <div class="space-y-3 bg-yellow-300 p-4 rounded-xl shadow-xl">
           <img src="assets/flow-chart.png" alt="">
           <h3 class="text-xl font-bold">Design Process</h3>
-          <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          <p>We maintain a deciplined process to make the design.</p>
         </div>
         <!-- Supervision Card -->
         <div class="space-y-3 bg-green-300 p-4 rounded-xl shadow-xl">
           <img src="assets/vision.png" alt="">
           <h3 class="text-xl font-bold">Supervision</h3>
-          <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          <p>We provide the supervision after sales services.</p>
         </div>
         <!-- Budget Plan Card -->
         <div class="space-y-3 bg-blue-300 p-4 rounded-xl shadow-xl">
           <img src="assets/budget-planning.png" alt="">
           <h3 class="text-xl font-bold">Budget Planning</h3>
-          <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          <p>We Provide best budget friendy planing..</p>
         </div>
       </div>
     </div>
